# ssm

./: ..env.un~  ..gitignore.un~  .ALDOT.yaml.un~  .README.md.un~  .gitignore  .main.py.un~  .nframes.py.un~  .read_file.py.un~  .ssh_test.py.un~  ALDOT.yaml  README.md  env  example-hosts.csv  example-hosts.json  example.env  hosts.csv  main.py  monitor.py  nframes.py  pyproject.toml  read_file.py  requirements.txt  setup.cfg  ssh_test.py  ssm  ssm.bat  ~
UI/: datastore.py  interface.py  nframes.py
src/ssm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/ssm/UI/: interface.py
src/ssmanager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
ssm/: interface.py
ssm/UI/: read_file.py
