[build-system]
requires = ["setuptools>=42", "appdirs>=1.4.4", "python-decouple>=3.6","requests>=2.25.1", "urllib3>=1.26.5"]
build-backend = "setuptools.build_meta"

[project]
name = "ssmanager"
version = "0.8.0"
description = "A Simple Session Manager for SSH in the terminal."
readme = "README.md"
authors = [{name = "Garrett Jones", email = "jonesgc137@gmail.com"}]
keywords = ["ssm", "ssh", "manager"]
dependencies = [
    "appdirs>=1.4.4", 
    "python-decouple>=3.6",
    "requests>=2.25.1", 
    "urllib3>=1.26.5"
]

requires-python = ">=3.0"

[project.optional-dependencies]
dev = []

[project-urls]
Homepage = "https://github.com/Lonestar137/ssm"

[project.scripts]
ssmanager = "ssm.main"


