[metadata]
name = ssmanager-Lonestar137
version = 0.8.0
author = Garrett Jones
author_email = jonesgc137@gmail.com
description = A Simple Session Manager for SSH in the terminal.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Lonestar137/ssm
project_urls =
    Bug Tracker = https://github.com/Lonestar137/ssm/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0

[options.packages.find]
where = src

